fixed a  lot of stuff

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,5 +1,5 @@
 .contact-page {
-    background-color: #e8e0fc;
+    background-image: url("../../assets/images/stripes.jpg");
     height: 100%;
     width: 100%;
 }
