--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col">
             <div class="who-we-are-header">
-              who we are
+              our mission
               <hr style="height: 3px; width: 25%; background-color: #3c3059">
               <hr style="height: 2px; width: 15%; background-color: #84b7b1">
             </div>
@@ -30,7 +30,7 @@
                 where both are possible. 
             </p>
             <div class="who-we-are-header">
-              organizers
+              founders
               <hr style="height: 3px; width: 25%; background-color: #3c3059">
               <hr style="height: 2px; width: 15%; background-color: #84b7b1">
             </div>
@@ -72,7 +72,41 @@ Julia Wu is a senior at Lake Highland Preparatory School in Florida. After being
               <h5>Amy Pu</h5>
               <p>photo</p>
               <p>bio</p>
-              
+              <div class="who-we-are-header">
+adult sponsers
+                  <hr style="height: 3px; width: 25%; background-color: #3c3059">
+                  <hr style="height: 2px; width: 15%; background-color: #84b7b1">
+
+                </div>
+                <div>
+                    <h5 style = "float:left;" > Becca Traber</h5>
+                    <hr style="height:20pt; visibility:hidden;" />
+                    <p style="float: left;"><img class= "claire" src="../../assets/images/lindsey-perlman.jpg" ></p>
+                      <p>
+                          Becca is a coach for Lake Highland Prep as well for several independent students. As a debater for the Kinkaid School, she earned eleven career TOC bids, won Berkeley and was a finalist at TFA state tournament and the TOC. As a coach, she has coached 14 students to the TOC and 4 students to TOC outrounds. At invitational tournaments, her students have accumulated over 40 TOC bids. Outside of debate, Becca is a PhD candidate at Yale University in political science, specializing in political theory. Her research is at the intersection of deliberative democracy, the study of social movements, and the philosophy of race and gender.
+
+                      </p>
+                  </div>
+                  <hr style="height:50pt; visibility:hidden;" />
+                  <div>
+                      <h5 style = "float:left;" > Zoe Ewing</h5>
+                      <hr style="height:20pt; visibility:hidden;" />
+                      <p style="float: left;"><img class= "claire" src="../../assets/images/zoe-ewing.jpg" ></p>
+                        <p>
+                            Zoë debated for Scarsdale High School and is now the head Lincoln-Douglas coach at Byram Hills High School. She joined debate to gain self-confidence and find an outlet for her competitive personality, but through debate, she also discovered her interest in philosophy and met many of her best friends. She received 9 career bids to the TOC and won or reached finals at the New York State Championship, Princeton (twice), Columbia, Bronx, the Valley Round Robin, and the Hockaday Round Robin. She now attends Columbia University. You can find her at many Northeast bid tournaments during the year!
+                        </p>
+                    </div>
+                    <hr style="height:50pt; visibility:hidden;" />
+                    <div>
+                        <h5 style = "float:left;" > Mina Lee</h5>
+                        <hr style="height:20pt; visibility:hidden;" />
+                        <p style="float: left;"><img class= "claire" src="../../assets/images/mina-lee.jpg" ></p>
+                          <p>
+                              Mina is thrilled to be a part of W.in Debate. She believes that having a strong support system in debate is vital, and she is excited to contribute. If it hadn’t been for other strong womxn in the community, she would not have been able to see her debate career through to the end of senior year. She would love more than anything to help be a part of that support system for other young womxn in the community.
+
+                          </p>
+                      </div>
+                      <hr style="height:50pt; visibility:hidden;" />
           </div>
         </div>
       </div>
