--- a/src/app/mentors/mentors.component.html
+++ b/src/app/mentors/mentors.component.html
@@ -7,19 +7,196 @@
                 <hr style="height: 3px; width: 25%; background-color: #3c3059">
                 <hr style="height: 2px; width: 15%; background-color: #84b7b1">
               </div>
+          
 
 
+              <ul id="rig">
+                  <li>
+                      <a class="rig-cell" href="#">
+                          <img class="rig-img" src="../../assets/images/simran-gandhi.jpg" />
+                          <span class="rig-overlay"></span>
+                          <span class="rig-text"><u>Simran Gandhi, Lexington HS (MA) </u><br><br>
+                            <p class="small-text">
+                            Simran will be heading into her 3rd year of LD debate in the fall, 
+                            and has extensive experience competing on both the national and local 
+                            circuits. She has reached elimination rounds and won speaker awards 
+                            throughout the year, finishing as a semi-finalist at Princeton and 
+                            quarter-finalist at NDCA. She was a lab assistant at the Lexington 
+                            Debate Institute this past summer, and she's really excited to be 
+                            working with Women in Debate. She wants to share her love for debate 
+                            with other girls and help them through the activity.  
+                            </p>
+                          </span>
+                      </a>
+                  </li>
+                  <li>
+                      <a class="rig-cell" href="#">
+                          <img class="rig-img" src="../../assets/images/madi-crowley .jpg" />
+                          <span class="rig-overlay"></span>
+                          <span class="rig-text">
+
+                              <u>Madi Crowley, Lake Highland Prep (FL) </u><br><br>
+                              <p class="small-text">
+                                  Madi wanted to become a mentor to not only be there emotionally for other women, but also to help foster improvement in debating skill. Her experience of being a women in debate is one full of triumphs and tribulations. Madi understands what it is like to be looked down upon and held to a lower standard just because you are a woman. Further, she knows what it is like to be truly uncomfortable, and at times feel unsafe, as a woman in debate. 
+                              </p>
+                          
+                          </span>
+                      </a>
+                  </li>
+                  <li>
+                      <a class="rig-cell" href="#">
+                          <img class="rig-img" src="../../assets/images/sanjana-bhatnagar.jpg" />
+                          <span class="rig-overlay"></span>
+                          <span class="rig-text">
+                            
+                              <u>Sanjana Bhatnagar, Scarsdale HS (NY) </u><br><br>
+                              <p class="small-text">
+                                  Sanjana has been debating for Scarsdale High School since 9th grade and is currently the Junior Varsity Director and Co-Captain of her team. While debate has been a positively life-changing activity for Sanjana, it has also been a large point of anxiety that she has had to work through. Luckily, throughout her debate career she has had the support of wonderful teammates, coaches, and friends to help her through her anxiety. As such, she is super excited to keep the positive energy running and have the opportunity to mentor and empower students through W.in debate!                              </p>
+
+                          </span>
+                      </a>
+                  </li>
+                  <li>
+                      <a class="rig-cell" href="#">
+                          <img class="rig-img" src="../../assets/images/isabella-nadel.jpg" />
+                          <span class="rig-overlay"></span>
+                          <span class="rig-text">
+
+                              <u>Isabella Nadel, WDM Valley (IA) </u><br><br>
+                              <p class="small-text">
+                                  Isabella Nadel is going to be a junior at WDM Valley and this will be her third year in LD. Isabella wanted to become a mentor because she has had firsthand experiences with sexism in debate as well as the opportunity to have close, female role models and friends on her team. However, not all women in debate that would like/benefit from this kind of bond are able to access it close to home (she recognizes she was lucky in that sense), so she wanted to be part of a program that helps facilitate these friendships and connections for young women.                              </p>
+
+                          </span>
+                      </a>
+                  </li>
+
+              </ul>
+              <br>
+              <ul id="rig">
+                  <li>
+                      <a class="rig-cell" href="#">
+                          <img class="rig-img" src="../../assets/images/avery-fortier.png" />
+                          <span class="rig-overlay"></span>
+                          <span class="rig-text">
+
+                              <u>Avery Fortier, Lexington HS (MA) </u><br><br>
+                              <p class="small-text">
+                                  Avery will be going into her third year of debate as a rising junior at Lexington High School this fall. She has made it to elims of UPenn, Scarsdale, and Pennsbury and won the Monticello, Shrewsbury, and Needham Invitationals. This summer, Avery attended the NSD flagship session and taught at the Lexington Debate Institute. She’s excited to be a mentor for W.IN because she believes it’s very important to help create a strong support network for the unfortunately few women in debate.                              </p>
+
+                          </span>
+                      </a>
+                  </li>
+                  <li>
+                      <a class="rig-cell" href="#">
+                          <img class="rig-img" src="../../assets/images/sally-ho.jpg" />
+                          <span class="rig-overlay"></span>
+                          <span class="rig-text">
+
+                              <u>Sally Ho, Scarsdale HS (NY) </u><br><br>
+                              <p class="small-text">
+                                  Sally has been debating for Scarsdale since her freshman year, and she currently serves as Novice director for her team. Some of her debate interests include theory, framework debate, and more recently, performance. She enjoys teaching younger debaters, having taught in New York’s Urban Debate League summer camp, and she is excited to be a part of W.in Debate!
+                          </span>
+                      </a>
+                  </li>
+                  <li>
+                      <a class="rig-cell" href="#">
+                          <img class="rig-img" src="../../assets/images/abby-morris.jpg" />
+                          <span class="rig-overlay"></span>
+                          <span class="rig-text">
+
+                              <u>Abby Morris, Lake Highland Prep (FL) </u><br><br>
+                              <p class="small-text">
+                                  Abby Morris is a sophomore at Lake Highland. Abby started debate in 7th grade, so she was a lot younger than most people, and it made her quickly realize the importance of having women as mentors. She was always uncomfortable working with the guys because she felt intimidated by them, and having older female teammates really helped her. That’s why she thinks W.in debate is so great; everyone deserves the ability to work and sometimes just talk to a female mentor, even if they don’t have one on their team.                              
+                              </p>
+
+                          </span>
+                      </a>
+                  </li>
+                  <li>
+                      <a class="rig-cell" href="#">
+                          <img class="rig-img" src="../../assets/images/megan-wu.png" />
+                          <span class="rig-overlay"></span>
+                          <span class="rig-text">
+
+                              <u>Megan Wu, Interlake HS (WA) </u><br><br>
+                              <p class="small-text">
+                                  Megan is a senior at Interlake High School and 2018-19 will be her fourth year in the activity. As the only circuit debater on her team, she became interested in building spaces by and for women when realizing the impact of her female role models despite often being the only woman in prep groups and war rooms. Her experiences of competing independently despite being the president of a mostly-female debate team reflect a gendered barrier to the national circuit that she is excited to work to resolve by working with w.in debate!                              </p>
+                          </span>
+                      </a>
+                  </li>
+              </ul>
+              <br>
+              <ul id="rig">
+                  <li>
+                      <a class="rig-cell" href="#">
+                          <img class="rig-img" src="../../assets/images/nicole-gladstein.jpg" />
+                          <span class="rig-overlay"></span>
+                          <span class="rig-text">
+
+                              <u>Nicole Gladstein, Hunter HS (NY) </u><br><br>
+                              <p class="small-text">
+                                  Nicole Gladstein is a senior at Hunter College High School in New York City. She competed on the national circuit in LD, breaking at several tournaments. She was the LD Novice Director during her junior year, and will be the captain of the LD team this year. She enjoyed working with novices, helping them learn all the basics of debate, and will be continue working with sophomores as they transition to varsity debate this year. She looks forward to mentoring women in debate and helping the next generation of debaters become successful!                               </p>
+
+                          </span>
+                      </a>
+                  </li>
+                  <li>
+                      <a class="rig-cell" href="#">
+                          <img class="rig-img" src="../../assets/images/parnika-agrawal.png" />
+                          <span class="rig-overlay"></span>
+                          <span class="rig-text">
+
+                              <u>Parnika Agrawal, Lake Highland Prep (FL) </u><br><br>
+                              <p class="small-text">
+                                  Parnika is a senior at Lake Highland and is going into her third year of debate. She wanted to become a mentor because she remembers what it’s like to be a newer female member of the male-dominated debate community. She looks forward to helping any younger debaters, especially those who feel like they have a harder time seeking out coaching due to the dominant demographics in LD.                               </p>
+
+                          </span>
+                      </a>
+                  </li>
+                  <li>
+                      <a class="rig-cell" href="#">
+                          <img class="rig-img" src="../../assets/images/mimi-laplant.jpeg" />
+                          <span class="rig-overlay"></span>
+                          <span class="rig-text">
+
+                              <u>Marguerite Laplant, Eagan HS (MN) </u><br><br>
+                              <p class="small-text">
+                                  Marguerite is a senior who has been debating since her freshman year. She had success in her local circuit including a 9th place finish at MN state, but in the last year has expanded to national circuit debate. She loves to teach younger students and wants to bring national circut debate to students who may not have access. She goes to a smaller school but has been lucky in gaining national circut skills, that she can’t wait to share with the next generation of debaters.                              </p>
+
+                          </span>
+                      </a>
+                  </li>
+                  <li>
+                      <a class="rig-cell" href="#">
+                          <img class="rig-img" src="../../assets/images/lauren-gilbert.png" />
+                          <span class="rig-overlay"></span>
+                          <span class="rig-text">
+
+                              <u>Lauren Gilbert, WDM Valley (IA)) </u><br><br>
+                              <p class="small-text">
+                                  Lauren Gilbert is a junior at Valley High School. She has consistently competed on the national circuit and is an active member on her school's debate team. Lauren is excited to be working as a mentor in order to help encourage greater involvement of women within debate, and to help all women feel included within the activity.                               </p>
+
+                          </span>
+                      </a>
+                  </li>
+
+              </ul>
+              
+
+
+
+             <!--
               <div class="row" style="margin-left:0px; margin-right:0px;">
                   <div class="col-md-2 col-md-offset-1">
-                    <div class="circularmain pic img-circle">                              
-                      
-                        <img src="../../assets/images/simran-gandhi.jpg" class="img-responsive img-circle fig">                   
-
-
-
-
+                    <div class="container">                              
+                        <img src="../../assets/images/simran-gandhi.jpg" class="image">                   
+                        <div class="overlay">
+                            <div class="text">Hello World
+                            </div>
+                        </div>
                     </div>
-                  </div>
+                   </div>
+                
                   <div class="col-md-2">
                     <div class="circularmain pic img-circle">
                         <img src="../../assets/images/madi-crowley .jpg" class="img-responsive img-circle fig">                   
@@ -45,7 +222,9 @@
                           <img src="../../assets/images/sally-ho.jpg" class="img-responsive img-circle fig">               
                       </div>
                     </div>
-                </div>
+                  
+              </div>
+            -->
           <div style="text-align: center">
             <button class="signup-button" (click)="openSignup()">Become a mentor!</button>
           </div>
