--- a/src/app/mentees/mentees.component.html
+++ b/src/app/mentees/mentees.component.html
@@ -1,22 +1,35 @@
-<section class="mentees-page">
+<section class="mentees-page-top">
     <div class="container">
       <div class="row">
         <div class="col">
-            <div class="mentees-header">
+            <div class="mentees-header" style="color: white;">
               mentees
               <hr style="height: 3px; width: 25%; background-color: #3c3059">
               <hr style="height: 2px; width: 15%; background-color: #84b7b1">
             </div>
+            </div>
+            </div>
+            </div>
+          </section>
+          
+          <section class="mentees-page">
+              <div class="container">
+                  <div class="row">
+                    <div class="col">
             <h1 class="title">
+                <br>
               As a mentee, you will:
             </h1>
             <ul class="list" > 
-              <li> Improve your debating skills by working with our mentors on speeches, cases, and content. </li>
+              <li> <b> Improve your debating skills </b> by working with our mentors on speeches, cases, and content. </li>
               <li> 
-                Access all of W.in Debate’s resources such as card files and cases. </li>
+                <b> Access all of W.in Debate’s resources </b> such as card files and cases. </li>
               <li> 
-                Be part of a network of intelligent and accepting women that will support you, both inside and outside of debate.</li>
+               <b> Be part of a network of intelligent and accepting women</b> that will support you, both inside and outside of debate.</li>
             </ul>
+            <div style="text-align: center">
+              <button class="signup-button" (click)="openSignup()">Become a mentee!</button>
+            </div>
             <div class="mentees-header">
               FAQ
               <hr style="height: 3px; width: 25%; background-color: #3c3059">
@@ -40,12 +53,12 @@
             <h1 class="title">
               How do I schedule meetings with my mentor?
             </h1>
-            <h1 class="title">
+           
               <ul class= "list" style="list-style-type:none">
                 <li>Each week, our mentors will input the times that they are available to work with mentees on our shared Google Calendar. Mentees can access this Google Calendar from the W.in Debate website. From there, mentees will contact the mentors they wish to work with to schedule video-chat sessions.
                 </li>
               </ul>
-                                  </h1>
+                                
                                   <h1 class="title">
                                       Can I join the program if I am not a woman?
                                     </h1>
@@ -71,7 +84,7 @@
                                                 </li>
                                             </ul>
                                           <h1 class="title">
-                                              Can I work with other mentors that I am not “assigned”?
+                                              Can I work with other mentors that I am not assigned?
                                             </h1>
                                             <ul class= "list" style="list-style-type:none">
                                                 <li>                     Yes! You are able to work with any mentor of your choosing. Mentor/mentee pairs are only a starting point for new members to get acquainted with one another.
@@ -87,9 +100,7 @@
                                                 </ul>
                   
                 
-          <div style="text-align: center">
-            <button class="signup-button" (click)="openSignup()">Sign up to be a mentee!</button>
-          </div>
+          
         </div>
       </div>
     </div>
