--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -11,7 +11,7 @@
 
             <ul id="rig">
                 <li>
-                    <a class="rig-cell" routerLink="lindsey-article">
+                    <a class="rig-cell" (click)="openLindseyArticle()">
                         <img class="rig-img" src="../../assets/images/lindsey-article-image.jpg" />
                         <span class="rig-overlay"></span>
                         <span class="rig-text">Fighting for a Place at the Front by Lindsey Perlman
