add in gender pronoun to mentor page

--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -14,6 +14,7 @@
               <div>Name: {{this.mentorsService.mentor.firstName}} {{this.mentorsService.mentor.lastName}}</div>
               <div>Age: {{this.mentorsService.mentor.age}} </div>
               <div>School: {{this.mentorsService.mentor.school}} </div>
+              <div>Gender Pronoun: {{this.mentorsService.mentor.genderPronoun}}</div>
               <div>Mentee: {{this.mentorsService.mentor.mentee}}</div>
           </div>
         </div>
